--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio_v2",
+  "name": "anna_umanskaya-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "sass": "^1.55.0",
     "sass-resources-loader": "^2.2.5",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "vuetify": "^2.6.0"
   },
@@ -26,6 +27,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
